Fix mobile pixel gap

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -5,7 +5,7 @@
   background: $brown linear-gradient(to bottom, $highlight, $highlight-end 68%, $brown 68%);
   border-radius: $border-radius-base $border-radius-base 0 0;
   box-shadow: 0 -1px 0 lighten(desaturate($highlight, 24%), 12%), 0 -2px 0 $highlight;
-  height: 74px;
+  height: 75px;
 }
 
 .Header-logo {
